syntax = "proto3";
option csharp_namespace = "Meowmentum.Server.Dotnet.Proto.Email";
option go_package = "./email";

service EmailService {
  rpc RegistrationConfirmation (RegistrationConfirmationRequest) returns (RegistrationConfirmationResponse);
  rpc PasswordReset (PasswordResetRequest) returns (PasswordResetResponse);
}

message RegistrationConfirmationRequest {
  string Email = 1;
  string Name = 2;
  string ConfirmationCode = 3;
}

message RegistrationConfirmationResponse {}

message PasswordResetRequest {
  string Email = 1;
  string Name = 2;
  string ConfirmationCode = 3;
}

message PasswordResetResponse {}
